# ob-python-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  test_arguments.py  test_mcp.py
.github/workflows/: ci.yml  publish.yml
examples/: lambda_handler.py  mcp_operations.py  opsbeacon_execute.py  test_mcp_protocol.py  test_mcp_simple.py
opsbeacon/: __init__.py  client.py  exceptions.py  opsbeacon.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py
